--- a/mod/thmod/localisation/english/astral_planes_l_english.yml
+++ b/mod/thmod/localisation/english/astral_planes_l_english.yml
@@ -284,11 +284,11 @@
  astral_planes.1030.b.tooltip: "This $DIMENSIONAL_LOCK$ will expire, and will need to be re-established with a Science Ship."
  LOCK_BYPASS_EFFECT_DESC: "Places a Dimensional Lock on a Wormhole or L-Gate. Once locked, only those with your permission may enter."
  BYPASS_FORBIDDEN_BY_LOCK: "Only those with permission from $PLAYER|Y0$ may enter."
- MOD_COUNTRY_ASTRAL_RIFT_SPEED_MULT: "Astral Rift Exploration Speed"
- MOD_COUNTRY_ASTRAL_RIFT_FAIL_MULT: "Astral Rift Fail Probability"
- MOD_SHIP_ASTRAL_RIFT_SPEED_MULT: "Astral Rift Exploration Speed"
+ MOD_COUNTRY_ASTRAL_RIFT_SPEED_MULT: "ความเร็วในการสำรวจรอยแยกมิติ"
+ MOD_COUNTRY_ASTRAL_RIFT_FAIL_MULT: "โอกาสความล้มเหลวของรอยแยกมิติ"
+ MOD_SHIP_ASTRAL_RIFT_SPEED_MULT: "ความเร็วในการสำรวจรอยแยกมิติ"
  MOD_SHIP_ASTRAL_RIFT_CLUES_ADD: "สกิลรอยแยกมิติ"
- MOD_ASTRAL_RIFT_DIFFICULTY_ADD: "Astral Rift Exploration Difficulty"
+ MOD_ASTRAL_RIFT_DIFFICULTY_ADD: "ความยากในการสำรวจรอยแยกมิติ"
  astral_rift_difficulty_increase_1: "Astral Rift Difficulty Increased"
  astral_rift_difficulty_increase_2: "$astral_rift_difficulty_increase_1$"
  astral_rift_difficulty_decrease_1: "Astral Rift Difficulty Decreased"
@@ -312,8 +312,8 @@
  trait_exd_desc: "This species originates from another dimension and requires a great deal of energy to survive in our universe."
  TRAIT_EXD_EFFECT: "Each pop working as a slave or better produces 0.5 £physics_research£ §YPhysics Research§! per month"
  origin_riftworld: "Riftworld"
- origin_riftworld_desc: "A massive rift in space and time looms near this civilization's homeworld. After studying the phenomenon for millennia, recent advances in starship technology will allow them to finally reach out and discover what secrets it might hold."
- origin_tooltip_riftworld_effects: "- Homeworld: ['concept_riftworld_digsite'] ['concept_archaeology_site'] $NEW_LINE$- Chance for [ 'concept_astral_rift', $ASTRAL_RIFTS$ ] to appear in systems you control: §G+100%§!"
+ origin_riftworld_desc: "เป็นอารยธรรมที่มีรอยแยกมิติอวกาศและกาลเวลาใกล้ดาวบ้านเกิด ทำให้มีการศึกษาปรากฏการณ์มาอย่างช้านานจนมีเทคโนโลยีที่สามารถใช้สำรวจและค้นหาความลับในรอยแยกเหล่านี้ได้"
+ origin_tooltip_riftworld_effects: "- ดาวบ้านเกิด: ['concept_riftworld_digsite'] ['concept_archaeology_site'] $NEW_LINE$- โอกาสที่[ 'concept_astral_rift', $ASTRAL_RIFTS$ ]จะปรากฏในระบบดาวที่คุณควบคุม: §G+100%§!"
  START_SCREEN_RIFTWORLD: "For as long as we can remember, the Great Rift has loomed in the skies above [GetHomeWorldName]. Legends propose that our past is intimately entwined with this mysterious celestial scar and an ancient impact site near our capital.\n\nFor generations, the site was revered, but little understood. However, recent seismic activity has uncovered subsurface anomalies in the crater. Preparations are already underway to drill into its core. Opinions remain divided on what we may uncover there.\n\nIs it simple coincidence that this has occurred at the advent of Hyperdrive technology? Just as we reach for the heavens, our attention is pulled back to the ground. Perhaps what what lies beneath the surface of this world is meant to aid us on our journey to the stars. Perhaps it can prepare us for whatever lies beyond the Rift."
  astral_planes.2105.name: "Strange Transmission"
  astral_planes.2105.desc: "In the aftermath of the exploration of the Astral Rift in §H[From.solar_system.GetName]§!, a mysterious transmission was received.\n\nOur scientists have determined its origin to be from beyond the rift itself, and have only been able to translate a few words."
@@ -353,7 +353,7 @@
  sm_reloading_bay: "Reloading Bay"
  sm_reloading_bay_desc: "Reserves a significant portion of the Starbase for reloading our weapon components, and provides for extra defense platforms.\n"
  requires_dimensional_space_object: "§RRequires a §Y$WORMHOLE$§!, an §Y$pc_rift_star$§!, an §Y$ASTRAL_RIFT$§!, a §Y$LGATE_GALACTIC$§! or a §Y$SHROUD_TUNNEL_GALACTIC$§!§!"
- civic_hyperspace_specialty: "Hyperspace Specialty"
+ civic_hyperspace_specialty: "ชำนาญการไฮเปอร์สเปซ"
  civic_hyperspace_specialty_desc: "This society has always embraced speed. The manipulation of hyperspace is just another thoroughfare, and those with aptitude in the field have risen to the highest caste."
  civic_hyperspace_specialty_effects: "£physics£ §Y$tech_hyper_drive_2$§! is Guaranteed Research Option.\nHas Low Intel on all systems within 3 Hyperlanes of your starting system."
  civic_hive_hyperspace_specialty: "Hyperspace Synchronicity"
@@ -365,20 +365,20 @@
  civic_corporate_hyperspace_specialty: "Hyperspace Trade"
  civic_corporate_hyperspace_specialty_desc: "Time is money, and this Megacorporation values speed. Heavy investment in R&D has paid off handsomely, granting the Corporation proprietary access to cutting-edge hyperspace manipulation techniques."
  civic_corporate_hyperspace_specialty_effects: "$civic_hyperspace_specialty_effects$"
- civic_dimensional_worship: "Dimensional Worship"
+ civic_dimensional_worship: "บูชาข้ามมิติ"
  civic_dimensional_worship_desc: "This society believes that a divine existence lies beyond the folds in space and time. Systems where instabilities are highest hold a sacred meaning to them as sites of both pilgrimage and research."
  civic_dimensional_worship_effects: "Allows to build a §Y$sm_dimensional_shrine$§! starbase building in systems containing a §Y$WORMHOLE$§!, an §Y$pc_rift_star$§!, an §Y$ASTRAL_RIFT$§!, an §Y$LGATE_GALACTIC$§! or a §Y$SHROUD_TUNNEL_GALACTIC$§!.\nEach §Y$sm_dimensional_shrine$§! provides §G+$@dimensional_shrine_unity_production$§! £unity£."
  civic_dimensional_worship_effects_additional: "- Chance for [ 'concept_astral_rift', $ASTRAL_RIFTS$ ] to appear in systems you control: §G+100%§!$NEW_LINE$§M- Rare technologies§! now appear at §Y1.1§! times the normal rate. This effect would change a §Y1%§! chance into a §Y1.1%§! chance."
  civic_corporate_dimensional_worship: "Dimensional Enterprise"
  civic_corporate_dimensional_worship_desc: "$civic_dimensional_worship_desc$"
  civic_corporate_dimensional_worship_effects: "$civic_dimensional_worship_effects$"
- civic_dark_consortium: "Dark Consortium"
+ civic_dark_consortium: "สมาคมสสารมืด"
  civic_dark_consortium_desc: "A deep understanding of the architecture of the universe allowed this society to exploit the mysterious properties of dark matter long before the discovery of the hyperdrive."
  civic_dark_consortium_effects: "Starts with £physics£ §Y$tech_mine_dark_matter$§! already researched.\nGives access to special §SEdicts§!.\nHas access to the §Y$council_agenda_agenda_dark_matter_breakthrough_name$§! Council Agenda."
  civic_corporate_dark_consortium: "Shadow Corporation"
  civic_corporate_dark_consortium_desc: "$civic_dark_consortium_desc$"
  civic_corporate_dark_consortium_effects: "$civic_dark_consortium_effects$"
- civic_sovereign_guardianship: "Sovereign Guardianship"
+ civic_sovereign_guardianship: "ผู้พิทักษ์อธิปไตย"
  civic_sovereign_guardianship_desc: "This collection of warring tribes has developed a historical preference for entrenched territories and defensive posturing. Now united, they are prepared to bring this philosophy to the stars, aiming to keep their borders solid and tensions low."
  civic_sovereign_guardianship_effects: "Unlocks §Y$fanatic_guardian_plural$§! as defense armies.\n$civic_sovereign_guardianship_effects_common$"
  civic_hive_sovereign_guardianship: "Guardian Cluster"
