--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -11,7 +11,7 @@
  MISSING_TECHNOLOGIES_STRING: "ไม่มีเทคโนโลยีตอนเริ่มเกม:"
  GUARANTEED_RESEARCH_OPTION_STRING: "การันตีตัวเลือกการวิจัย:"
  STARTING_NOT_HOMEWORLD: "- ดาวเคราะห์เริ่มต้นไม่ใช่ดาวบ้านเกิดของจักรวรรดินี้"
- CHALLENGING_ORIGIN: "§RWARNING: Challenging Origin§!\n"
+ CHALLENGING_ORIGIN: "§Rคำเตือน: จุดเริ่มต้นท้าทาย§!\n"
  NO_GUARANTEED_WORLDS: "['concept_guaranteed_colonies']: จะไม่เกิด"
  HOMEWORLD: "ดาวบ้านเกิด:"
  STARTING_PLANET: "ดาวเคราะห์เริ่มต้น:"
@@ -1012,7 +1012,7 @@
  resolution_category_industry:0 "การพัฒนาอุตสาหกรรม"
  resolution_industry_repeal_1:0 "§Rยกเลิก $resolution_industry_regulatory_facilitation$§!"
  resolution_industry_repeal_1_desc:1 "The [global_event_country.GetGalCommunityOrGalImperium] has no place meddling in industrial matters. We should not be forcing our views on other empires."
- resolution_industry_repeal_1_effect_success:0 "Repeals the §Y$resolution_industry_regulatory_facilitation$§! resolution."
+ resolution_industry_repeal_1_effect_success:0 "ยกเลิกมติ §Y$resolution_industry_regulatory_facilitation$§!"
  resolution_industry_repeal_2:0 "§Rยกเลิก $resolution_industry_collective_waste_management$§!"
  resolution_industry_repeal_2_desc:0 "$resolution_industry_repeal_1_desc$"
  resolution_industry_repeal_2_effect_success:2 "ยกเลิกมติ §Y$resolution_industry_collective_waste_management$§! แล้วออก §Y$resolution_industry_regulatory_facilitation$§! เป็นกฎหมายกาแล็กติก"
@@ -1345,13 +1345,13 @@
  resolution_galactic_threats_committee:0 "คณะกรรมาธิการจัดการภัยคุกคามกาแล็กติก"
  resolution_galactic_threats_committee_desc:0 "Who knows what threats lurk just out of sensor range? Creating a committee dedicated to the study of galactic level threats will prepare us for anything."
  resolution_galactic_threats_committee_modifier_desc:0 "Damage to Endgame Crisis factions: §G+20%§!\n§R+10%§! Researchers upkeep.\n§RDangerous experiments might have dangerous results.§!"
- resolution_community_champions_repeal:1 "Repeal $resolution_community_champions$"
+ resolution_community_champions_repeal:1 "ยกเลิก $resolution_community_champions$"
  resolution_community_champions_repeal_desc:1 "Repeals the §Y$resolution_community_champions$§! resolution."
- resolution_constitutional_immunity_repeal:0 "Repeal $resolution_constitutional_immunity$"
+ resolution_constitutional_immunity_repeal:0 "ยกเลิก $resolution_constitutional_immunity$"
  resolution_constitutional_immunity_repeal_desc:0 "ยกเลิกมติ §Y$resolution_constitutional_immunity$§! ทำให้จักรวรรดินี้อาจจบลงด้วยการละเมิดกฎหมายกาแล็กติกอีกครั้ง"
- resolution_development_aides_repeal:1 "Repeal $resolution_development_aides$"
+ resolution_development_aides_repeal:1 "ยกเลิก $resolution_development_aides$"
  resolution_development_aides_repeal_desc:1 "Repeals the §Y$resolution_development_aides$§! resolution."
- resolution_galactic_threats_committee_repeal:1 "Repeal $resolution_galactic_threats_commitee$"
+ resolution_galactic_threats_committee_repeal:1 "ยกเลิก $resolution_galactic_threats_commitee$"
  resolution_galactic_threats_committee_repeal_desc:1 "Repeals the §Y$resolution_galactic_threats_commitee$§! resolution."
  community_champion_counselor:0 "$resolution_community_champions$"
  community_champion_custodian:0 "$resolution_community_champions$"
@@ -2357,7 +2357,7 @@
  origin_hegemon_npc:0 "Hegemon Subordinate"
  origin_hegemon_npc_desc:0 "This civilization established early contact with their immediate alien neighbors. Gradually, over the span of a century, they were subordinated to one of those neighbors, who masterminded the birth of an interstellar union with them as its leader."
  origin_doomsday:0 "วันโลกาวินาศ"
- origin_doomsday_desc:1 "§RWARNING: Challenging Origin§!\nThis civilization's homeworld is highly unstable, and it is only a matter of time before it explodes. Their only hope is to seek refuge elsewhere before it is too late."
+ origin_doomsday_desc:1 "§Rคำเตือน: จุดเริ่มต้นท้าทาย§!\nThis civilization's homeworld is highly unstable, and it is only a matter of time before it explodes. Their only hope is to seek refuge elsewhere before it is too late."
  origin_tooltip_doomsday_effects:4 ""
  origin_tooltip_doomsday_negative_effects: "- $HOMEWORLD$ มีการปรับเปลี่ยนของดาวเคราะห์ ['concept_doomsday_modifier'] $NEW_LINE$- $NO_GUARANTEED_WORLDS$"
  START_SCREEN_DOOMSDAY:0 "[Root.Capital.GetName] is dying. Our homeworld had been plagued by earthquakes and volcanic eruptions for thousands of years before our [Root.GetScientistPlural] finally confirmed the unthinkable. Their calculations showed that our tectonically unstable planet would tear itself apart within a century or two.\n\nWith no way of halting this process, it was realized that our survival as a species would depend on our ability to leave [Root.Capital.GetName] behind and seek refuge elsewhere amongst the stars. An unprecedented industrial and technological buildup followed, and our civilization rapidly progressed from primitive atmospheric flight to early space travel. The first vessels capable of hyperspace travel are ready, but there is not much time.\n\nWe must find a new home."
