--- a/mod/thmod/localisation/english/first_contact_dlc_resolutions_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_dlc_resolutions_l_english.yml
@@ -1,22 +1,22 @@
 ﻿l_english:
  resolution_category_pre_ftl_stances:1 "ท่าทีต่ออารยธรรมดึกดำบรรพ์ Pre-FTL"
- resolution_pre_ftl_stances_repeal_1:0 "§RRepeal $resolution_pre_ftl_stances_equal_standing$§!"
+ resolution_pre_ftl_stances_repeal_1:0 "§Rยกเลิก $resolution_pre_ftl_stances_equal_standing$§!"
  resolution_pre_ftl_stances_repeal_1_desc:1 "Treating "civilizations" that are barely even capable of leaving their homeworlds as equals is a preposterous idea. The empires of the [global_event_country.GetGalCommunityOrGalImperium] should be allowed to treat lesser civilizations within their borders as they see fit."
- resolution_pre_ftl_stances_repeal_1_effect_success:1 "Repeals the §Y$resolution_pre_ftl_stances_equal_standing$§! resolution."
- resolution_pre_ftl_stances_repeal_2:0 "§RRepeal $resolution_pre_ftl_stances_non_interference$§!"
+ resolution_pre_ftl_stances_repeal_1_effect_success:1 "ยกเลิกมติ §Y$resolution_pre_ftl_stances_equal_standing$§!"
+ resolution_pre_ftl_stances_repeal_2:0 "§Rยกเลิก $resolution_pre_ftl_stances_non_interference$§!"
  resolution_pre_ftl_stances_repeal_2_desc:1 "Forbidding the empires of the [global_event_country.GetGalCommunityOrGalImperium] from making use of resources that rightfully belongs to them just because savages squat on them is a violation of our intellectual and property rights."
- resolution_pre_ftl_stances_repeal_2_effect_success:1 "Repeals the §Y$resolution_pre_ftl_stances_non_interference$§! resolution."
- resolution_pre_ftl_stances_repeal_3:1 "§RRepeal $resolution_pre_ftl_stances_exploitation$§!"
+ resolution_pre_ftl_stances_repeal_2_effect_success:1 "ยกเลิกมติ §Y$resolution_pre_ftl_stances_non_interference$§!"
+ resolution_pre_ftl_stances_repeal_3:1 "§Rยกเลิก $resolution_pre_ftl_stances_exploitation$§!"
  resolution_pre_ftl_stances_repeal_3_desc:1 "To treat another civilization solely as a source of resources to be exploited purely on the basis of their current technology is abhorrent. The empires of the [global_event_country.GetGalCommunityOrGalImperium] should ensure that the civilizations that will follow us to the stars are guaranteed the same rights as any other species."
- resolution_pre_ftl_stances_repeal_3_effect_success:1 "Repeals the §Y$resolution_pre_ftl_stances_exploitation$§! resolution."
- resolution_pre_ftl_stances_equal_standing:1 "Equal Standing Act"
+ resolution_pre_ftl_stances_repeal_3_effect_success:1 "ยกเลิกมติ §Y$resolution_pre_ftl_stances_exploitation$§!"
+ resolution_pre_ftl_stances_equal_standing:1 "ปฏิบัติอย่างเท่าเทียมกัน"
  resolution_pre_ftl_stances_equal_standing_desc:1 "Each pre-FTL civilization has the potential to acquire space flight and join the [global_event_country.GetGalCommunityOrGalImperium]. As such, we must treat any future members with dignity and respect."
  resolution_pre_ftl_stances_equal_standing_tooltip:1 "The §Y$interference_not_allowed$§! and §Y$interference_aggressive$§! policies are §Rbanned§!.\nIncreases the effectiveness of the §Y$ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_TITLE$§! diplomatic agreement with Pre-FTL Civilizations.\n§YPre-FTL Civilizations§! that become spacefaring through §Y$ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_TITLE$§! will gain §G+100§! £loyalty£ §YLoyalty§!.\n§YCommercial Agreements§! with pre-FTL Civilizations are more effective."
- resolution_pre_ftl_stances_non_interference:1 "Non-Interference Act"
+ resolution_pre_ftl_stances_non_interference:1 "ไม่แทรกแซง"
  resolution_pre_ftl_stances_non_interference_desc:1 "Pre-FTL Civilizations should be given the chance to develop without outside interference."
  resolution_pre_ftl_stances_non_interference_tooltip:1 "The §Y$interference_active$§! and §Y$interference_aggressive$§! policies are §Rbanned§!.\nGrants access to the §Y$interference_not_allowed$§! policy regardless of Ethics or Civics.\nAll §YDiplomatic Agreements§! with Pre-FTL Civilizations will be considered in §RBreach of Galactic Law§!.\nFailed §YEspionage Operations§! targeting Pre-FTL Civilizations will be considered in §RBreach of Galactic Law§!."
  resolution_pre_ftl_stances_non_interference_modifier:0 "§YInsight§! progress from observing pre-FTL Civilizations is increased by §G+25%§!."
- resolution_pre_ftl_stances_exploitation:1 "Exploitation Act"
+ resolution_pre_ftl_stances_exploitation:1 "แสวงหาผลประโยชน์"
  resolution_pre_ftl_stances_exploitation_desc:1 "Pre-FTL worlds fall within the jurisdiction of whoever controls their system, and each empire should be allowed the freedom to treat their property in whichever way they see fit."
  resolution_pre_ftl_stances_exploitation_tooltip:1 "Observation Posts provide a small amount of £physics£ £engineering£ §HResearch Points§! while §YObserving§! pre-FTL Civilizations. Passing the §Y$resolution_galacticstudies_advanced_xenostudies$§! Resolution will increase the £physics£ £engineering£ §HResearch Points§! gained.\n\nThe §Y$interference_not_allowed$§! policy is §Rbanned§!.\nUse of the §Y$ACTION_OPEN_TECHNOLOGICAL_ENLIGHTENMENT_TITLE$§! Diplomatic Agreement with Pre-FTL Civilizations will be considered in §RBreach of Galactic Law§!.\nEvidence that the §Y$operation_plant_advanced_knowledge$§! Espionage Operation has been carried out will be considered in §RBreach of Galactic Law§!."
  preftl.10000.desc:0 "The [global_event_country.GetGalCommunityOrGalImperium] has passed the §Y$resolution_pre_ftl_stances_equal_standing$§! resolution, forbidding empires from holding the §Y$interference_not_allowed$§! or §Y$interference_aggressive$§! policies.\n\nOur Empire is currently in breach of this resolution. Shall we change our policies to be in compliance?"
