--- a/mod/thmod/localisation/english/first_contact_l_english.yml
+++ b/mod/thmod/localisation/english/first_contact_l_english.yml
@@ -19,8 +19,8 @@
  first_contact.4000.a.bs:0 "Infuriating."
  first_contact.4000.a.payback:0 "We have to get ready."
  first_contact.4000.a.tooltip:0 "Starts the §YSecond Contact§! process with the §Y$NAME_MSI_country$§!."
- origin_payback:0 "Payback"
- origin_payback_desc:1 "§RWARNING: Challenging Origin§!\nThis civilization has been visited by an alien empire who forcibly enlightened and enslaved them. They have repelled their invaders, but will they return?"
+ origin_payback:0 "เอาคืน"
+ origin_payback_desc:1 "§Rคำเตือน: จุดเริ่มต้นท้าทาย§!\nอารยธรรมนี้มีต่างดาวได้เคยมาเยือนและบังคับกดขี่ไว้ แต่พวกเขาขับไล่ผู้บุกรุกได้ แต่ว่าผู้บุกรุกนี้จะกลับมาอีกหรือไม่?"
  origin_tooltip_payback_effects:2 "- $HOMEWORLD$ $TABBED_NEW_LINE$- ['concept_advanced_infrastructure']$TABBED_NEW_LINE$- $PLANETARY_MODIFIERS$ ['concept_payback_unified_purpose']$NEW_LINE$- $HOME_SYSTEM$ ['concept_archaeology_site'] ['concept_payback_digsite'] $NEW_LINE$- ['concept_advanced_empires', จักรวรรดิ AI ขั้นสูง] หนึ่งแห่ง และอีกหลายๆ ['concept_preftl_civilizations'] โดยไม่คำนึงถึงการตั้งค่ากาแล็กซี่ ตอนสร้าง Session เมื่อเริ่มเกมใหม่ $NEW_LINE$- อารยธรรม Pre-FTL หนึ่งแห่ง: ยกระดับด้วย จุดเริ่มต้น §I$origin_broken_shackles$§!"
  origin_tooltip_payback_negative_effects: "- $INITIAL_POPS$ §R-10§! $NEW_LINE$- $HOMEWORLD$ $TABBED_NEW_LINE$- การปรับเปลี่ยนของดาวเคราะห์ ['concept_payback_debris_field'] $TABBED_NEW_LINE$- ['concept_payback_ship_debris']: +6 $TABBED_NEW_LINE$- การทำลายล้าง: §R33%§! $NEW_LINE$- $HOME_SYSTEM$ §Iแหล่งทรัพยากร§! ไม่ได้ใช้ประโยชน์ $NEW_LINE$- $MISSING_TECHNOLOGIES_STRING$ $TABBED_NEW_LINE$- ['concept_basic_science_lab_1', £physics_research£ $tech_basic_science_lab_1$] $TABBED_NEW_LINE$- ['concept_planetary_government', £society_research£ $tech_planetary_government$] $TABBED_NEW_LINE$- ['concept_corvettes', £engineering_research£ $tech_corvettes$]"
  START_SCREEN_PAYBACK:0 "We had a deal.\n\nWhen the visitors from the stars revealed themselves, they offered us a fair contract: technological enlightment, to be repaid in installments. Within a generation, our planet was transformed into a so-called 'advanced civilization.'\n\nThen we read the fine print: to repay our 'debt', they insisted we work for them, on an indefinite term. When our leaders protested, the outsiders turned violent. We fought back.\n\nWe won, though barely, and only after suffering sizeable losses. Now, our scientists have finally reverse-engineered the secrets of FTL travel from the ships we destroyed. It's a big galaxy out there, but sooner or later we're sure to meet our 'benefactors' again. In fact, we're looking forward to it.\n\nIt's time to get some payback."
@@ -178,8 +178,8 @@
  payback_make_them_pay_words_1_chain_desc:1 "$payback_make_them_pay_words_chain_desc$\n\n§LPass the §Y$resolution_pre_ftl_stances_equal_standing$§! and all four §YEconomic Sanction§! types (Economic, Administrative, Research, Military).§!"
  payback_make_them_pay_words_2_chain_title:0 "$payback_make_them_pay_words_chain_title$"
  payback_make_them_pay_words_2_chain_desc:1 "$payback_make_them_pay_words_chain_desc$\n\n§LPass the §Y$resolution_pre_ftl_stances_non_interference$§! and all four §YEconomic Sanction§! types (Economic, Administrative, Research, Military).§!"
- equal_standing_passed:0 "Equal Standing Act passed"
- non_interference_passed:0 "Non-Interference Act passed"
+ equal_standing_passed:0 "ปฏิบัติอย่างเท่าเทียมกันผ่านแล้ว"
+ non_interference_passed:0 "ไม่แทรกแซงผ่านแล้ว"
  sanctions_passed:1 "Sanction types passed"
  NAME_Debt_Collectors:0 "Debt Collectors"
  NAME_Debt_Collectors_Country:0 "Interstellar Credit Management Company"
@@ -198,7 +198,7 @@
  payback_student:0 "Certified Educator"
  payback_student_desc:0 "The student becomes the master."
  payback_student_tooltip:1 "Technological Enlightenment effectiveness: §G+25%§!."
- casus_belli_cb_payback:0 "Payback"
+ casus_belli_cb_payback:0 "เอาคืน"
  casus_belli_cb_payback_acquire_hint:0 "\n§EThe §Y$casus_belli_cb_payback$§! §HCasus Belli§! is granted when the target of our revenge is not our Overlord.§!"
  war_goal_wg_payback_wipe_them_out:0 "End Threat"
  war_goal_wg_payback_wipe_them_out_desc:0 "War is waged to end a threat against our own empire.\n\n§RThere will be no Status Quo peace in this war: we either win, or we succumb.§!"
@@ -357,8 +357,8 @@
  origin.4170.desc:0 "Dear former clients,\n\nWe heard about your recent economic troubles. Learning to manage your finances is a necessary part of running an empire, and sometimes, failure is an essential part of learning.\n\nWe are happy to offer you the necessary resources to put your country out of deficit. Of course, the cost loaned resources will be added to your outstanding debt. We hope this little financial lesson can be of help."
  origin.4170.a:0 "We accept the loan."
  origin.4170.b:0 "We can manage it on our own."
- origin_broken_shackles:0 "Broken Shackles"
- origin_broken_shackles_desc:1 "$CHALLENGING_ORIGIN$\nThis civilization began as a mutiny aboard a slaver vessel, and is made up of a diverse group of pre-FTL species."
+ origin_broken_shackles:0 "โซ่ตรวนที่แตกหัก"
+ origin_broken_shackles_desc:1 "$CHALLENGING_ORIGIN$\nเป็นเหล่าทาสที่หลากหลายเผ่าพันธ์หลบหนีจากยานขนทาสและมาสร้างอารยธรรมของตนเอง"
  START_SCREEN_BROKEN_SHACKLES:0 "Free at last!\n\nSome were born into bondage. Others, crippled by debt, found themselves sold as indentured labor. But the technology of our former masters was not enough to save them. In secret, we planned our mutiny. During the brief, bloody struggle, our captors were killed, and their slave ship critically damaged. An emergency landing left us stranded on the surface of [Root.Capital.GetName].\n\nThough we are made up of species from many different worlds, under your leadership we have found common cause. In time, the damaged systems of the slaver vessel will be repaired, and its bounty of secrets - including the location of our former home worlds - will be revealed.\n\nOur shackles are broken. Now the work begins."
  START_SCREEN_BROKEN_SHACKLES_MEGACORP:0 "Free* at last!\n\nSome were born into bondage. Others, crippled by debt, found themselves sold as indentured labor. All of us dreamed of something more, a life of ease and abundance. In secret, we planned our mutiny. During the brief, bloody struggle, our captors were killed, and their slave ship critically damaged. An emergency landing left us stranded on the surface of [Root.Capital.GetName].\n\nThough we are made up of species from many different worlds, under your directorship we have found common cause. Our former masters may have been cruel, but they understood the business of life. Like them, we must be steadfast in our pursuit of profit. In time, the damaged systems of the slaver vessel will be repaired, and its bounty of secrets - including the location of our former home worlds - will be revealed. Our shackles are broken. Now is the time to incorporate.\n\n*Legal Notice:\nThe use of the word 'free' is non-binding and does not oblige the Corporation to provide any discount or volunteer any action that could affect the profit margins of [Root.GetName] shareholders. If you have any questions regarding this or other terms, or should you wish to opt out of continued existence on [Root.Capital.GetName], please contact our legal or security professionals in the $building_bureaucratic_1$ on [Root.Capital.GetName] for immediate resolution."
  origin_tooltip_broken_shackles_effects:1 "- $INITIAL_POPS$ เผ่าพันธุ์จาก ['concept_preftl_civilizations'] ทั่วกาแล็กซี $NEW_LINE$- $STARTING_PLANET$ $TABBED_NEW_LINE$- การปรับเปลี่ยนของดาวเคราะห์ ['concept_free_at_last_broken_shackles'] $TABBED_NEW_LINE$- คุณสมบัติของดาวเคราะห์ ['concept_crashed_slaver_ship_broken_shackles'] $TABBED_NEW_LINE$- ['concept_broken_shackles_buildings'] $NEW_LINE$- $STARTING_SYSTEM$ ['concept_archaeology_site'] ['concept_broken_shackles_digsite'] $NEW_LINE$- One ['concept_advanced_empires', จักรวรรดิ AI ขั้นสูง] หนึ่งแห่ง และอีกหลายๆ อารยธรรม Pre-FTL โดยไม่คำนึงถึงการตั้งค่ากาแล็กซี่ ตอนสร้าง Session เมื่อเริ่มเกมใหม่ $NEW_LINE$- อารยธรรม Pre-FTL หนึ่งแห่ง: จะเป็นเผ่าพันธุ์และดาวบ้านเกิดของจักรวรรดินี้ $NEW_LINE$- อารยธรรม Pre-FTL หนึ่งแห่ง: ยกระดับด้วย จุดเริ่มต้น §I$origin_payback$§!"
@@ -747,8 +747,8 @@
  job_broken_shackles_scavenger_effect_desc:0 "£job_broken_shackles_scavenger£ $job_broken_shackles_scavenger_plural$ produce small amounts of $r_alloys$, $r_amenities$, and $r_research$."
  mod_job_broken_shackles_scavenger_add:0 "$job_broken_shackles_scavenger$ Jobs"
  triggered_opinion_kinship:0 "Kinship"
- origin_fear_of_the_dark:0 "Fear of the Dark"
- origin_fear_of_the_dark_desc:0 "A century ago, one of the planets in this empire's home system was destroyed by a freak asteroid. Some believed this was a malicious attack by an alien species. Others brushed off these concerns as mere paranoia. The tension between the two groups grew so great that a newly-terraformed planet was granted to the fearmongers."
+ origin_fear_of_the_dark:0 "หวาดกลัวความมืด"
+ origin_fear_of_the_dark_desc:0 "เมื่อทศวรรษก่อน ดาวบ้านเกิดเดิมถูกทำลายด้วยอุกกาบาต ซึ่งความเห็นประชากรกลุ่มหนึ่งก็เชื่อว่าเป็นการโจมตีจากต่างดาว ทำให้มีความตึงเครียดและหวาดระแวงต่อโลกภายนอก"
  origin_tooltip_fear_of_the_dark_effects:1 "- $HOME_SYSTEM$ ['concept_preftl_civilizations', อารยธรรม Pre-FTL] สร้างขึ้นโดย กลุ่มการเมืองที่แบ่งแยกดินแดน, ซึ่งเดิมเป็นส่วนหนึ่งของจักรวรรดิคุณ ทำให้เกิดเหตุการณ์และผลประโยชน์ต่างๆ"
  origin_tooltip_fear_of_the_dark_negative_effects: "- $INITIAL_POPS$ §R-8§!"
  START_SCREEN_FEAR_OF_THE_DARK_START:0 "A century ago, the planet we now call "The Divider" exploded. This was the beginning of our "
@@ -782,7 +782,7 @@
  NAME_fotd_destroyer_4:0 "$NAME_fotd_destroyer_2$"
  NAME_fotd_cruiser_3:0 "Defense Cruiser"
  NAME_fotd_cruiser_4:0 "$NAME_fotd_cruiser_3$"
- fear_of_the_dark_system_NAME:0 "Fear of the Dark"
+ fear_of_the_dark_system_NAME:0 "หวาดกลัวความมืด"
  fear_of_the_dark_system_DESC:0 "A regular star system with a pair of Binary Planets.\n\n$system_initializer_DESC$"
  sol_system_fear_of_the_dark_system_NAME:0 "Fear of the Dark (Sol)"
  sol_system_fear_of_the_dark_system_DESC:0 "$sol_system_initializer_DESC$"
@@ -1041,7 +1041,7 @@
  fotd_rationed_living_desc:0 "After experiencing a devastating deficit, our partner planet must now make cuts to non-essential institutions. As a result, our cultural exchange projects have deteriorated."
  fotd_triumviri:0 "Triumviri"
  fotd_triumviri_desc:0 "While our partner planet provides us with insights into technology and tactics, the Fevorians' unique historical perspective has provided a new lens through which to view our own society."
- fotd_chain_title:0 "Fear of the Dark"
+ fotd_chain_title:0 "หวาดกลัวความมืด"
  fotd_chain_desc:0 "As the victim of an unprovoked act of aggression by a technologically superior foe, we understand the cost of negligence. Never again."
  fotd_hunter_poi:0 "Hunter System"
  fotd_hunter_desc:0 "The system from which the attack that shattered §YThe Divider§! originated. Scans indicate that the system is abnormally rich in minerals."
