--- a/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
@@ -6,7 +6,7 @@
  NAME_Declared_Crisis_War:0 "[This.MainDefender.GetAdj] Crisis War"
  NAME_Crisis_Star_Eater:0 "Devourer"
  NAME_GDF:0 "Galactic Defense Force"
- NAME_Imperial_Crusade_War:0 "Galactic Imperial Crusade"
+ NAME_Imperial_Crusade_War:0 "สงครามครูเสดกาแล็กติกอิมพีเรียม"
  NAME_Ring_Section_A:0 "Ring Section A"
  NAME_Ring_Section_B:0 "Ring Section B"
  NAME_Ring_Section_C:0 "Ring Section C"
