--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -767,7 +767,7 @@
  resolution_custodian_form_empire_tooltip:3 "The §YGalactic Community§! changes into the §YGalactic Imperium§!.\n§RAll members leave any existing Federations.§!\n\n§RThe §Y[Root.GetName]§! becomes the §YImperial Core§!, shifting towards §YAuthoritarianism§! and adopting an §YImperial§! government. All incompatible §YCivics§! are removed.§!"
  resolution_custodian_form_empire_tooltip_machine:1 "The §YGalactic Community§! changes into the §YGalactic Imperium§!.\n§RAll members leave any existing Federations.§!\n\nThe §Y[Root.GetName]§! becomes the §YImperial Nexus§!."
  resolution_custodian_form_empire_tooltip_hive:1 "The §YGalactic Community§! changes into the §YGalactic Imperium§!.\n§RAll members leave any existing Federations.§!\n\nThe §Y[Root.GetName]§! becomes the §YImperial Hive§!."
- resolution_custodian_united_front:0 "A United Front"
+ resolution_custodian_united_front:0 "แนวรบร่วม"
  resolution_custodian_united_front_desc:0 "The threat our galaxy faces presents us with a simple choice: stand together, or die alone. We shall fight as one, sharing information about the enemy and putting old grudges aside."
  resolution_emperor_united_front:0 "$resolution_custodian_united_front$"
  resolution_emperor_united_front_desc:0 "$resolution_custodian_united_front_desc$"
@@ -992,12 +992,12 @@
  civic_galactic_sovereign_desc:1 "This society has achieved mastery over much of the galaxy, serving as the current rulers of the Galactic Imperium."
  civic_galactic_sovereign_megacorp:0 "Corporate Sovereign"
  civic_galactic_sovereign_megacorp_desc:0 "This Megacorporation has achieved mastery over much of the galaxy, serving as the current corporate rulers of the Galactic Imperium."
- casus_belli_cb_imperial_crusade:0 "Imperial Crusade"
+ casus_belli_cb_imperial_crusade:0 "สงครามครูเสดอิมพีเรียม"
  war_goal_wg_imperial_crusade:1 "บังคับให้เข้าสู่จักรวรรดิอิมพีเรียม"
  war_goal_wg_imperial_crusade_desc:1 "สงครามเพื่อบังคับให้ศัตรูเข้าร่วมกับจักรวรรดิกาแลกติก\n\nเมื่อสงครามยุติ ระบบดาวที่เราครอบครองจะได้รับการปลดปล่อยในฐานะสมาชิกใหม่ของจักรวรรดิกาแลกติกอิมพีเรียม หากมีดาวเคราะห์อาศัยอยู่อย่างน้อยหนึ่งดวง"
- resolution_galactic_empire_imperial_crusade:0 "Imperial Crusade"
+ resolution_galactic_empire_imperial_crusade:0 "สงครามครูเสดอิมพีเรียม"
  resolution_galactic_empire_imperial_crusade_desc:1 "The borders of the Galactic Imperium do not yet encompass the entire galaxy - this must be rectified. An Imperial Crusade will, if successful, force the target of this resolution to join the Imperium."
- resolution_category_foreign_relations:0 "Foreign Relations"
+ resolution_category_foreign_relations:0 "ความสัมพันธ์นอกประชาคม"
  resolution_galactic_empire_imperial_crusade_tooltip:0 "Grants the §Y'Imperial Crusade'§! casus belli on the targeted empire."
  casus_belli_cb_trial_of_advancement:0 "Trial of Advancement"
  war_goal_wg_seize_council_seat:1 "ตำแหน่งในสภา"
@@ -1772,8 +1772,8 @@
  war_goal_wg_steal_galatron_imperium_desc:0 "$war_goal_wg_steal_galatron_desc$"
  war_goal_wg_end_threat_crisis:0 "$war_goal_wg_end_threat$"
  war_goal_wg_end_threat_crisis_desc:0 "$war_goal_wg_end_threat_desc$"
- gal_community:0 "Community"
- gal_imperium:0 "Imperium"
+ gal_community:0 "ประชาคม"
+ gal_imperium:0 "อิมพีเรียม"
  emperor.350.name:0 "Imperium Moves Against Us"
  emperor.350.desc:0 "The tyrants of the §HGalactic Imperium§! seek to impose their will on us! With the blessing of their [gal_emperor.GetRulerTitle], the Imperial Senate has passed a resolution that makes us the target of an §HImperial Crusade§!.\n\nUnless we can somehow defeat this impending invasion, we will be forced into the Imperium and subordinated to the whims of the [gal_emperor.GetRulerTitle]."
  emperor.350.a:0 "The coming battles will decide our future."
@@ -1784,7 +1784,7 @@
  emperor.351.b:0 "It begins."
  emperor.351.c:0 "Are we next?"
  resolution_imperial_crusade_tooltip:0 "All members of the Galactic Imperium declare war on the target empire to force it to accept Imperial membership."
- resolution_category_imperial_reforms:0 "Imperial Reforms"
+ resolution_category_imperial_reforms:0 "การปฏิรูปอิมพีเรียม"
  resolution_emperor_pax_galactica:0 "Pax Galactica"
  resolution_emperor_pax_galactica_desc:0 "For the Imperium to prosper, it must not tear itself apart in pointless infighting. Wars between members cannot be permitted."
  resolution_emperor_pax_galactica_tooltip:0 "Members of the Imperium, including its ruler, may not declare war on each other aside from Trials of Advancement."
