--- a/mod/thmod/localisation/english/toxoids_l_english.yml
+++ b/mod/thmod/localisation/english/toxoids_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
- origin_toxic_knights:0 "Knights of the Toxic God"
- origin_toxic_knights_desc:2 "Centuries ago, this species' homeworld was visited by a Toxic Entity. The ecological catastrophe that followed ruined half the world, but allowed an early unification of the survivors in their reverence for the Toxic God. An Order of Knights has been created to search for the Toxic God, and although many things have changed, the quest continues."
+ origin_toxic_knights:0 "อัศวินของเทพทรพิษ"
+ origin_toxic_knights_desc:2 "เมื่อหลายทศวรรศก่อน มีเอนทิตี้ เคยมาเยือนและสร้างมหันตภัยที่ทำลายโลกไปครึ่งหนึ่ง เหลือไว้อีกครึ่งให้กับเหล่าพลเมืองที่บูชาเอนทิตี้นี้เป็นเทพทรพิษของพวกเขา ภาคีอัศวินได้ถูกก่อตั้งขึ้นเพื่อออกตามหาเทพของพวกเขาในอวกาศอันกว้างใหญ่นี้"
  origin_toxic_knights_effects:3 "- Homeworld: $TABBED_NEW_LINE$- ['concept_toxic_features'] $TABBED_NEW_LINE$- ['concept_pc_habitat', ที่อยู่อาศัยวงโคจรดาว] ที่มีลักษณะเฉพาะ: $TABBED_NEW_LINE$$t$- ['concept_order_keep', £building£ $building_order_keep$] $TABBED_NEW_LINE$$t$- ['concept_orders_demesne', £district£ $district_orders_demesne$] $TABBED_NEW_LINE$$t$- งาน ['concept_politician', £job_politician£ $job_politician$] ถูกแทนที่ด้วย ['concept_order_jobs'] $NEW_LINE$- สถานการณ์: ['concept_knights_quest'] $NEW_LINE$- นโยบาย: §IKnightly Duties§! $NEW_LINE$- $AVAILABLE_HOLDINGS$ ['concept_knight_commandery', £building£ Order's Commanderies] ในอาณานิคมของเมืองขึ้น"
  origin_toxic_knights_negative_effects: "- $INITIAL_POPS$ §R-3§!"
  START_SCREEN_TOXIC_KNIGHTS:1 "Long ago, our planet was divided. Petty kings squabbled constantly, and our population bled for their vain ambitions. But with the coming of the first High King, all of this changed. Their inspired leadership forged a kingdom without equal.\n\nAbove all else, the High King was pious. War was waged against any who denied their God, but still the heretics persisted. The King's prayers were answered when the Toxic God visited our world. Though its time among us was brief, its baneful influence poisoned the lands of the unbelievers. Any who survived pledged fealty to the High King. For the first time, our world was unified.\n\nThe Toxic God soon left us, but the King, determined to find it, founded an order of knights. For centuries, these valiant souls searched tirelessly, but to no avail. The Toxic God had long since departed from our world. The next chapter of the Quest would be written in the stars. With the use of powerful relics, it was the Order that built our Empire's first orbital station. A mighty Keep, it would become the springboard from which they plunged ever deeper into the cosmos."
@@ -441,8 +441,8 @@
  origin_tooltip_overtuned_effects:4 "- $SPECIES_TRAITS$ คุณลักษณะ ['concept_overtuned_traits'] $NEW_LINE$- คุณลักษณะการปรับแต่งมากเกินไป:$TABBED_NEW_LINE$- สามารถเพิ่มประสิทธิภาพได้ด้วย ประกาศคำสั่ง ['concept_damn_the_consequences'] $TABBED_NEW_LINE$- สามารถเพิ่มและลบได้ด้วย §Iการดัดแปลงพันธุกรรม§!\n- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_gene_tailoring', £society£ $tech_gene_tailoring$]"
  START_SCREEN_OVERTUNED:1 "Nature is a tepid inventor. Evolution is a glacial process. To prosper we require strength, speed and brain power - now, not in a million years. Natural selection is miserly with its gifts and so we must improve ourselves.\n\nThus our civilization is built on the principle of unrestrained enhancement of our physical bodies. These enhancements have allowed us to unite our world under one banner, and now they will lead us even further.\n\nWith genetically crafted brains, brawn, and bravery, we shall prosper among the stars... As only a perfectly designed species can."
  disables_overtuned_features:0 "§RChoosing this Ascension Perk will disable Overtuned Origin mechanics.§!"
- civic_toxic_baths:0 "Mutagenic Spas"
- civic_corporate_toxic_baths:0 "Mutagenic Spas"
+ civic_toxic_baths:0 "สปาก่อกลายพันธุ์"
+ civic_corporate_toxic_baths:0 "สปาก่อกลายพันธุ์"
  civic_hive_toxic_baths:0 "Permutation Pools"
  civic_machine_toxic_baths:0 "Hyper Lubrication Basin"
  civic_tooltip_toxic_baths_effects:1 "Can build §YMutagenic Spas§!\nEach §YBath Attendant§! grants:\nPop Growth Speed: §G+1%§! per §HIndustrial District§!\nHappiness: §R-0.75%§! per §HIndustrial District§!\nHabitability: §R-0.25%§! per §HIndustrial District§!"
@@ -500,7 +500,7 @@
  mod_job_overlord_bath_attendant_add:0 "$job_bath_attendant$ Jobs"
  mod_job_overlord_bath_attendant_hive_add:0 "$job_bath_attendant_hive$ Jobs"
  mod_job_overlord_bath_attendant_machine_add:0 "$job_bath_attendant_machine$ Jobs"
- civic_relentless_industrialists:0 "Relentless Industrialists"
+ civic_relentless_industrialists:0 "นักอุตสาหกรรมที่ไม่หยุดยั้ง"
  civic_relentless_industrialists_desc:0 "To live is to exploit. This civilization is built around the principle of living life to the fullest, in the sense of squeezing the maximum profit from every last ounce of matter and membrane available for exploitation."
  civic_corporate_relentless_industrialists:0 "$civic_relentless_industrialists$"
  civic_corporate_relentless_industrialists_desc:0 "$civic_relentless_industrialists_desc$"
