--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -246,27 +246,27 @@
  TRIGGER_LEASE_DAYS:0 "Fleet $FLEET|Y$ lease days $COMPARE$ $VALUE|Y$"
  TRIGGER_LEASE_DAYS_NOT:0 "Fleet $FLEET|Y$ lease days NOT $COMPARE$ $VALUE|Y$"
  resolution_category_defenseprivatization:0 "การแปรรูปกลาโหม"
- resolution_defenseprivatization_repeal_1:0 "§RRepeal $resolution_defenseprivatization_defense_contracts$§!"
+ resolution_defenseprivatization_repeal_1:0 "§Rยกเลิก $resolution_defenseprivatization_defense_contracts$§!"
  resolution_defenseprivatization_repeal_1_desc:0 "While the professionalism of defense contractors is undeniable, the empires of the [global_event_country.GetGalCommunityOrGalImperium] should not rely too heavily on private peacekeeping."
- resolution_defenseprivatization_repeal_2:0 "§RRepeal $resolution_defenseprivatization_private_support_troops$§!"
+ resolution_defenseprivatization_repeal_2:0 "§Rยกเลิก $resolution_defenseprivatization_private_support_troops$§!"
  resolution_defenseprivatization_repeal_2_desc:0 "$resolution_defenseprivatization_repeal_1_desc$"
- resolution_defenseprivatization_repeal_3:0 "§RRepeal $resolution_defenseprivatization_condottieri$§!"
+ resolution_defenseprivatization_repeal_3:0 "§Rยกเลิก $resolution_defenseprivatization_condottieri$§!"
  resolution_defenseprivatization_repeal_3_desc:0 "$resolution_defenseprivatization_repeal_1_desc$"
- resolution_defenseprivatization_repeal_4:0 "§RRepeal $resolution_defenseprivatization_security_business$§!"
+ resolution_defenseprivatization_repeal_4:0 "§Rยกเลิก $resolution_defenseprivatization_security_business$§!"
  resolution_defenseprivatization_repeal_4_desc:0 "$resolution_defenseprivatization_repeal_1_desc$"
- resolution_defenseprivatization_repeal_5:0 "§RRepeal $resolution_defenseprivatization_corporate_warlords$§!"
+ resolution_defenseprivatization_repeal_5:0 "§Rยกเลิก $resolution_defenseprivatization_corporate_warlords$§!"
  resolution_defenseprivatization_repeal_5_desc:0 "$resolution_defenseprivatization_repeal_1_desc$"
- resolution_defenseprivatization_defense_contracts:0 "Security Contractors"
+ resolution_defenseprivatization_defense_contracts:0 "ผู้รับเหมารักษาความปลอดภัย"
  resolution_defenseprivatization_defense_contracts_desc:0 "In the interest of galactic security, we should invest resources in independent security agencies. These highly-trained and non-political professionals will help organize defense for the members of the [global_event_country.GetGalCommunityOrGalImperium]."
- resolution_defenseprivatization_private_support_troops:0 "High Consequence Protection"
+ resolution_defenseprivatization_private_support_troops:0 "การคุ้มครองสิ่งที่มีผลกระทบสูง"
  resolution_defenseprivatization_private_support_troops_desc:0 "As the scale of conflicts increases, private security outfits must be empowered to keep doing what they do best: keep the [global_event_country.GetGalCommunityOrGalImperium] safe."
- resolution_defenseprivatization_condottieri:0 "Neutral Defenders"
+ resolution_defenseprivatization_condottieri:0 "ผู้พิทักษ์ที่เป็นกลาง"
  resolution_defenseprivatization_condottieri_desc:0 "War might be inevitable, but collateral damage is not. By placing its trust in the hands of defense specialists, the [global_event_country.GetGalCommunityOrGalImperium] is certain to dramatically reduce the number of reported war atrocities."
- resolution_defenseprivatization_security_business:0 "Galactic Risk Management"
+ resolution_defenseprivatization_security_business:0 "บริหารความเสี่ยงกาแล็กติก"
  resolution_defenseprivatization_security_business_desc:0 "Despite our best efforts, violent ideological conflicts keep agitating the galaxy. Empires keep proving themselves prone to petty squabbles. Regulating their personal militaries is sure to allow neutral defense contractors to keep the peace more efficiently."
- resolution_defenseprivatization_corporate_warlords:0 "Corporate Peacekeeping"
+ resolution_defenseprivatization_corporate_warlords:0 "บริษัทรักษาสันติภาพ"
  resolution_defenseprivatization_corporate_warlords_desc:0 "'$enclave.235.4.desc$'"
- resolution_defenseprivatization_repeal_1_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_defense_contracts$§! resolution."
+ resolution_defenseprivatization_repeal_1_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_defense_contracts$§!"
  resolution_defenseprivatization_repeal_2_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_private_support_troops$§! แล้วออก §Y$resolution_defenseprivatization_defense_contracts$§! เป็นกฎหมายกาแล็กติก"
  resolution_defenseprivatization_repeal_3_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_condottieri$§! แล้วออก §Y$resolution_defenseprivatization_private_support_troops$§! เป็นกฎหมายกาแล็กติก"
  resolution_defenseprivatization_repeal_4_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_security_business$§! แล้วออก §Y$resolution_defenseprivatization_condottieri$§! เป็นกฎหมายกาแล็กติก"
@@ -302,29 +302,29 @@
  suzerains_sovereignty:1 "Suzerains and Sovereignty"
  resolution_category_intergalacticdirective:0 "คำสั่งอินเตอร์กาแล็กติก"
  resolution_category_bureaucraticsurveillance:0 "การตรวจตราดูแลระบบราชการ"
- resolution_intergalacticdirective_regulated_growth:0 "Regulated Growth"
+ resolution_intergalacticdirective_regulated_growth:0 "ควบคุมการเติบโต"
  resolution_intergalacticdirective_regulated_growth_desc:0 "By regulating the borders of the member nations we can secure a safer and fairer galaxy for all. Though some might find the bureaucracy stifling, it is for the betterment of us all."
- resolution_intergalacticdirective_ensured_sovereignty:0 "Ensured Sovereignty"
+ resolution_intergalacticdirective_ensured_sovereignty:0 "รองรับอธิปไตย"
  resolution_intergalacticdirective_ensured_sovereignty_desc:0 "The Galactic Community will put into motion directives to ensure the sovereignty of its members, particularly those who have previously had their integrity breached by other empires."
- resolution_intergalacticdirective_a_voice_for_all:0 "A Voice for All"
+ resolution_intergalacticdirective_a_voice_for_all:0 "เสียงสำหรับทุกคน"
  resolution_intergalacticdirective_a_voice_for_all_desc:0 "This resolution will that ensure every member of the Galactic Community will have a say about the future of their empire."
- resolution_intergalacticdirective_repeal_1:0 "§RRepeal $resolution_intergalacticdirective_regulated_growth$§!"
+ resolution_intergalacticdirective_repeal_1:0 "§Rยกเลิก $resolution_intergalacticdirective_regulated_growth$§!"
  resolution_intergalacticdirective_repeal_1_desc:0 "Though it is natural for empires to demand their borders be respected, the directives enforced by the Galactic Community have become overbearing and stifling. To ensure a smoothly functional bureaucracy, it is time to cut back on some of these mandates."
- resolution_intergalacticdirective_repeal_2:0 "§RRepeal $resolution_intergalacticdirective_ensured_sovereignty$§!"
+ resolution_intergalacticdirective_repeal_2:0 "§Rยกเลิก $resolution_intergalacticdirective_ensured_sovereignty$§!"
  resolution_intergalacticdirective_repeal_2_desc:0 "$resolution_intergalacticdirective_repeal_1_desc$"
- resolution_intergalacticdirective_repeal_3:0 "§RRepeal $resolution_intergalacticdirective_a_voice_for_all$§!"
+ resolution_intergalacticdirective_repeal_3:0 "§Rยกเลิก $resolution_intergalacticdirective_a_voice_for_all$§!"
  resolution_intergalacticdirective_repeal_3_desc:0 "$resolution_intergalacticdirective_repeal_1_desc$"
- resolution_bureaucraticsurveillance_administrative_insight:0 "Administrative Insight"
+ resolution_bureaucraticsurveillance_administrative_insight:0 "ข้อมูลเชิงลึกด้านการบริหาร"
  resolution_bureaucraticsurveillance_administrative_insight_desc:0 "As part of our efforts to simplify galactic bureaucracy, we are enforcing a clearer administrative hierarchy in the senate, particularly between those member states that already have diplomatic agreements in place."
- resolution_bureaucraticsurveillance_borderless_authority:0 "Borderless Authority"
+ resolution_bureaucraticsurveillance_borderless_authority:0 "อำนาจไร้พรมแดน"
  resolution_bureaucraticsurveillance_borderless_authority_desc:0 "As part of our continual efforts to simplify its internal bureaucracy, even greater authority will be handed to the stronger members of the senate."
- resolution_bureaucraticsurveillance_personal_oversight:0 "Personal Oversight"
+ resolution_bureaucraticsurveillance_personal_oversight:0 "การกำกับดูแลส่วนบุคคล"
  resolution_bureaucraticsurveillance_personal_oversight_desc:0 "While some states have admittedly experienced a degradation of their sovereignty, our efforts to eliminate bureaucratic red tape have vastly improved the efficiency of the senate!"
- resolution_bureaucraticsurveillance_repeal_1:0 "§RRepeal $resolution_bureaucraticsurveillance_administrative_insight$§!"
+ resolution_bureaucraticsurveillance_repeal_1:0 "§Rยกเลิก $resolution_bureaucraticsurveillance_administrative_insight$§!"
  resolution_bureaucraticsurveillance_repeal_1_desc:0 "Our focus on eliminating bureaucratic red tape, while successful, has caused several member states to complain that their sovereignty has been compromised. They are now proposing a mandate to restore some of that lost independence."
- resolution_bureaucraticsurveillance_repeal_2:0 "§RRepeal $resolution_bureaucraticsurveillance_borderless_authority$§!"
+ resolution_bureaucraticsurveillance_repeal_2:0 "§Rยกเลิก $resolution_bureaucraticsurveillance_borderless_authority$§!"
  resolution_bureaucraticsurveillance_repeal_2_desc:0 "$resolution_bureaucraticsurveillance_repeal_1_desc$"
- resolution_bureaucraticsurveillance_repeal_3:0 "§RRepeal $resolution_bureaucraticsurveillance_personal_oversight$§!"
+ resolution_bureaucraticsurveillance_repeal_3:0 "§Rยกเลิก $resolution_bureaucraticsurveillance_personal_oversight$§!"
  resolution_bureaucraticsurveillance_repeal_3_desc:0 "$resolution_bureaucraticsurveillance_repeal_1_desc$"
  count_available_debris_trigger:0 "Count Available Debris"
  effect_random_available_debris:0 "Random Available Debris"
